# Copyright (c) 2018 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "portaudio-sine"
version = "0.1.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
license = "MIT"

[[bin]]
name = "nbsquare"
path = "src/nbsquare.rs"

[[bin]]
name = "bsquare"
path = "src/bsquare.rs"

[[bin]]
name = "bsine"
path = "src/bsine.rs"

[[bin]]
name = "bwhite2"
path = "src/bwhite2.rs"

[[bin]]
name = "brecord"
path = "src/brecord.rs"

[[bin]]
name = "bfuzz"
path = "src/bfuzz.rs"

[[bin]]
name = "bfuzzbox"
path = "src/bfuzzbox.rs"

[dependencies]
portaudio = "0.7"
rand = "0.5"
byteorder = "1.2"
hound = "3.4"
